--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.23",
+    "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "postcss": "^8.5.6",
     "react": "19.2.3",
