--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "autoprefixer": "^10.4.23",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
+    "next-auth": "^4.24.13",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "daisyui": "^5.5.14",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "tailwindcss": "^4.1.18"
